--- a/Programmers/Lv1/1_ 조건에 맞는 도서 리스트 출력하기.md
+++ b/Programmers/Lv1/1_ 조건에 맞는 도서 리스트 출력하기.md
@@ -2,8 +2,7 @@
 
 ### [조건에 맞는 도서 리스트 출력하기](../https://school.programmers.co.kr/learn/courses/30/lessons/144853)
 ### 문제 풀이
-```
-sql
+```Mysql
 SELECT BOOK_ID, DATE_FORMAT(PUBLISHED_DATE, '%Y-%m-%d')
 FROM BOOK
 WHERE PUBLISHED_DATE BETWEEN '2021-01-01' AND '2021-12-31'
