--- a/Programmers/Lv1/1_ 조건에 맞는 도서 리스트 출력하기.md
+++ b/Programmers/Lv1/1_ 조건에 맞는 도서 리스트 출력하기.md
@@ -2,8 +2,8 @@
 
 ### [조건에 맞는 도서 리스트 출력하기](https://school.programmers.co.kr/learn/courses/30/lessons/144853)
 ### 문제
-BOOK 테이블에서 2021년에 출판된 '인문' 카테고리에 속하는 도서 리스트를 찾아서 도서 ID(BOOK_ID), 출판일 (PUBLISHED_DATE)을 출력하는 SQL문을 작성해주세요./n
-결과는 출판일을 기준으로 오름차순 정렬해주세요./n
+BOOK 테이블에서 2021년에 출판된 '인문' 카테고리에 속하는 도서 리스트를 찾아서 도서 ID(BOOK_ID), 출판일 (PUBLISHED_DATE)을 출력하는 SQL문을 작성해주세요.<br>
+결과는 출판일을 기준으로 오름차순 정렬해주세요.<br>
 
 ### 문제 풀이
 ```Mysql
