--- a/Programmers/Lv1/1_ 조건에 맞는 도서 리스트 출력하기.md
+++ b/Programmers/Lv1/1_ 조건에 맞는 도서 리스트 출력하기.md
@@ -1,4 +1,6 @@
 ## 문제1.  조건에 맞는 도서 리스트 출력하기
+![mysql](https://user-images.githubusercontent.com/77037338/210045212-c935e0d2-541f-4900-bb06-4d30bfd5d347.svg)
+
 
 ### [조건에 맞는 도서 리스트 출력하기](https://school.programmers.co.kr/learn/courses/30/lessons/144853)
 ### 문제
