10_입양 시각 구하기(1)

--- a/Programmers/Lv2/10_입양 시각 구하기(1).md
+++ b/Programmers/Lv2/10_입양 시각 구하기(1).md
@@ -17,8 +17,9 @@ GROUP BY HOUR
 ORDER BY HOUR ASC
 ```
 
-===
-*** DATE 포멧에서 시간, 분 등 따로 추출하는 법 ***
+---
+
+### *** DATE 포멧에서 시간, 분 등 따로 추출하는 법 ***
 1) month(date) : 해당 날짜가 몇 월인지 알려준다. (리턴 값은 1-12 사이)
 2) dayname(date) : 영어식 요일이름 리턴 (예: thursday, friday)
 3) monthname(date) : 영어식 월이름 리턴 (예: february, march)
