--- a/Programmers/Lv2/15_가격대 별 상품 개수 구하기.md
+++ b/Programmers/Lv2/15_가격대 별 상품 개수 구하기.md
@@ -17,6 +17,6 @@ ORDER BY PRICE_GROUP ASC
 ```
 
 ---
-*** 자릿수 변환을 위한 함수 ***
+### *** 자릿수 변환을 위한 함수 ***
 1) ROUND(숫자,반올림할 자릿수) - 숫자를 반올림할 자릿수 +1 자릿수에서 반올림
 2) TRUNCATE(숫자,버릴 자릿수) - 숫자를 버릴 자릿수 아래로 버림
