--- a/Programmers/Lv2/18_진료과별 총 예약 횟수 출력하기.md
+++ b/Programmers/Lv2/18_진료과별 총 예약 횟수 출력하기.md
@@ -16,3 +16,11 @@ WHERE APNT_YMD LIKE '2022-05%'
 GROUP BY MCDP_CD
 ORDER BY COUNT(MCDP_CD) ASC, MCDP_CD ASC
 ```
+
+```Mysql
+SELECT MCDP_CD AS 진료과코드, COUNT(MCDP_CD) AS 5월예약건수
+FROM APPOINTMENT
+WHERE APNT_YMD LIKE '2022-05%'
+GROUP BY 진료과코드
+ORDER BY 5월예약건수 ASC, 진료과코드 ASC
+```
