--- a/Programmers/Lv2/18_진료과별 총 예약 횟수 출력하기.md
+++ b/Programmers/Lv2/18_진료과별 총 예약 횟수 출력하기.md
@@ -27,7 +27,7 @@ ORDER BY 5월예약건수 ASC, 진료과코드 ASC
 ```Mysql
 SELECT MCDP_CD AS 진료과코드, COUNT(DATE_FORMAT(APNT_YMD, '%Y-%m-%d')) AS 5월예약건수
 FROM APPOINTMENT 
-WHERE MONTH(APNT_YMD) = 05
+WHERE MONTH(APNT_YMD) = '05'
 GROUP BY 진료과코드
 ORDER BY 5월예약건수, 진료과코드
 ```
