19_성분으로 구분한 아이스크림 총 주문량

--- a/Programmers/Lv2/19_성분으로 구분한 아이스크림 총 주문량.md
+++ b/Programmers/Lv2/19_성분으로 구분한 아이스크림 총 주문량.md
@@ -13,4 +13,5 @@ SELECT i.INGREDIENT_TYPE, SUM(h.TOTAL_ORDER) AS TOTAL_ORDER
 FROM ICECREAM_INFO i JOIN FIRST_HALF h
 ON i.FLAVOR = h.FLAVOR
 GROUP BY i.INGREDIENT_TYPE
+ORDER BY f.TOTAL_ORDER
 ```
