07_즐겨찾기가 가장 많은 식당 정보 출력하기

--- a/Programmers/Lv3/07_즐겨찾기가 가장 많은 식당 정보 출력하기.md
+++ b/Programmers/Lv3/07_즐겨찾기가 가장 많은 식당 정보 출력하기.md
@@ -20,7 +20,7 @@ HAVING MAX(FAVORITES)
 ORDER BY FOOD_TYPE DESC
 ```
 결과<br>
-<img src="https://user-images.githubusercontent.com/77037338/210742233-b5e952cc-fc79-4932-8ced-70a8e1b9148e.png" width="50%" height="50%">
+<img src="https://user-images.githubusercontent.com/77037338/210742233-b5e952cc-fc79-4932-8ced-70a8e1b9148e.png">
 
 ---
 
@@ -36,4 +36,4 @@ HAVING MAX(FAVORITES)
 ORDER BY FOOD_TYPE DESC
 ```
 결과<br>
-<img src="https://user-images.githubusercontent.com/77037338/210744064-ba9407fc-b110-4af6-ab1a-634068186658.png" width="50%" height="50%">
+<img src="https://user-images.githubusercontent.com/77037338/210744064-ba9407fc-b110-4af6-ab1a-634068186658.png">
