07_즐겨찾기가 가장 많은 식당 정보 출력하기

--- a/Programmers/Lv3/07_즐겨찾기가 가장 많은 식당 정보 출력하기.md
+++ b/Programmers/Lv3/07_즐겨찾기가 가장 많은 식당 정보 출력하기.md
@@ -31,8 +31,9 @@ SELECT FOOD_TYPE,
        REST_NAME, 
        FAVORITES
 FROM REST_INFO
-GROUP BY FOOD_TYPE
-HAVING MAX(FAVORITES)
+WHERE (FOOD_TYPE, FAVORITES) IN (SELECT FOOD_TYPE, MAX(FAVORITES)
+                                 FROM REST_INFO
+                                 GROUP BY FOOD_TYPE)
 ORDER BY FOOD_TYPE DESC
 ```
 결과<br>
