02_입양 시각 구하기(2)

--- a/Programmers/Lv4/02_입양 시각 구하기(2).md
+++ b/Programmers/Lv4/02_입양 시각 구하기(2).md
@@ -8,10 +8,25 @@
 0시부터 23시까지, 각 시간대별로 입양이 몇 건이나 발생했는지 조회하는 SQL문을 작성해주세요. 이때 결과는 시간대 순으로 정렬해야 합니다.<br>
 
 ### 문제 풀이
-오답 코드<br>
+오답 코드 <br>
 ```Mysql
 SELECT HOUR(DATETIME) AS HOUR, COUNT(ANIMAL_ID) AS COUNT
 FROM ANIMAL_OUTS
 GROUP BY HOUR
 ORDER BY HOUR
+```
+정답 코드. <br>
+```Mysql
+WITH RECURSIVE 24HOURS AS (
+    SELECT 0 AS 24HOUR
+    UNION ALL
+    SELECT 24HOUR + 1 FROM 24HOURS 
+    WHERE 24HOUR < 23
+)
+
+SELECT h.24HOUR AS HOUR, COUNT(ANIMAL_ID) AS COUNT
+FROM 24HOURS h LEFT JOIN ANIMAL_OUTS o
+ON h.24HOUR = HOUR(o.DATETIME)
+GROUP BY 24HOUR
+ORDER BY 24HOUR
 ```
