01_보호소에서 중성화한 동물

--- a/Programmers/Lv4/01_보호소에서 중성화한 동물.md
+++ b/Programmers/Lv4/01_보호소에서 중성화한 동물.md
@@ -14,4 +14,5 @@ FROM ANIMAL_OUTS o LEFT JOIN ANIMAL_INS i
 ON o.ANIMAL_ID = i.ANIMAL_ID
 WHERE i.SEX_UPON_INTAKE IN ('Intact Female', 'Intact Male')
       AND o.SEX_UPON_OUTCOME IN ('Spayed Female', 'Neutered Male')
+ORDER BY ANIMAL_ID ASC
 ```
