07_그룹별 조건에 맞는 식당 목록 출력하기

--- a/Programmers/Lv4/07_그룹별 조건에 맞는 식당 목록 출력하기.md
+++ b/Programmers/Lv4/07_그룹별 조건에 맞는 식당 목록 출력하기.md
@@ -25,3 +25,18 @@ WHERE p.MEMBER_ID IN (SELECT MEMBER_ID
                      )
 ORDER BY r.REVIEW_DATE ASC, r.REVIEW_TEXT ASC
 ```
+정답코드
+```Mysql
+SELECT p.MEMBER_NAME, 
+       r.REVIEW_TEXT, 
+       DATE_FORMAT(r.REVIEW_DATE, '%Y-%m-%d') AS REVIEW_DATE
+FROM MEMBER_PROFILE p JOIN REST_REVIEW r
+ON p.MEMBER_ID = r.MEMBER_ID
+WHERE p.MEMBER_ID = (SELECT MEMBER_ID 
+                     FROM REST_REVIEW
+                     GROUP BY MEMBER_ID
+                     ORDER BY COUNT(MEMBER_ID) DESC
+                     LIMIT 1
+                    )
+ORDER BY r.REVIEW_DATE ASC, r.REVIEW_TEXT ASC
+```
