176._Second Highest Salary

--- a/LeetCode/Medium/176._Second Highest Salary.md
+++ b/LeetCode/Medium/176._Second Highest Salary.md
@@ -1,5 +1,5 @@
 # 문제176. Second Highest Salary
-<center><img src="https://user-images.githubusercontent.com/77037338/210046724-5f984c66-80c3-4c70-9fdc-32371e86c30c.png" width="50%" height="50%"></center>
+<center><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/LeetCode_Logo_black_with_text.svg/458px-LeetCode_Logo_black_with_text.svg.png?20200122084501" width="50%" height="50%"></center>
 
 ### [176. Second Highest Salary](https://leetcode.com/problems/second-highest-salary/)
 
