14_특정 기간동안 대여 가능한 자동차들의 대여비용 구하기

--- a/Programmers/Lv4/14_특정 기간동안 대여 가능한 자동차들의 대여비용 구하기.md
+++ b/Programmers/Lv4/14_특정 기간동안 대여 가능한 자동차들의 대여비용 구하기.md
@@ -45,3 +45,41 @@ FROM HISTORY
 WHERE AVAILABLE = '대여가능'
 ORDER BY 3 DESC, 2 ASC, 1 DESC
 ```
+### 정답 코드
+1. 11월만 아니면 되는게 아니라, 마지막 날짜를 기준으로 11월 1일 이후 날짜라면 대여불가하다고 판단한다.
+![image](https://user-images.githubusercontent.com/77037338/219431309-c0a1948b-5f26-49f8-be59-16b5688a2416.png)
+2. DURATION_TYPE을 30일 이상으로 지정해줘야 한다.
+3. 코드를 돌린 정답은 아래와 같다.
+![image](https://user-images.githubusercontent.com/77037338/219431905-bed9644f-6a3f-4367-9bc5-eff5cde0b43c.png)
+
+
+```Mysql
+WITH HISTORY AS (
+    SELECT A.CAR_ID
+         , A.CAR_TYPE
+         , A.FEE
+         , A.AVAILABLE
+    FROM (
+        SELECT DISTINCT RH.CAR_ID
+             , RC.CAR_TYPE
+             , RC.DAILY_FEE
+             , ROUND(RC.DAILY_FEE * 30 * (100 - RP.DISCOUNT_RATE) / 100, 0) AS FEE
+             , CASE WHEN END_DATE > '2022-11-01' THEN '대여불가' ELSE '대여가능' END AS AVAILABLE
+        FROM CAR_RENTAL_COMPANY_RENTAL_HISTORY RH
+        JOIN CAR_RENTAL_COMPANY_CAR RC ON RH.CAR_ID = RC.CAR_ID
+        JOIN CAR_RENTAL_COMPANY_DISCOUNT_PLAN RP ON RC.CAR_TYPE = RP.CAR_TYPE
+        WHERE RC.CAR_TYPE IN ('세단', 'SUV')
+          AND DURATION_TYPE = '30일 이상'
+        ORDER BY 1 DESC, AVAILABLE DESC
+    ) A
+    GROUP BY CAR_ID
+    HAVING 500000 <= FEE AND FEE <= 2000000
+)
+
+SELECT CAR_ID
+     , CAR_TYPE
+     , FEE
+FROM HISTORY
+WHERE AVAILABLE = '대여가능'
+ORDER BY 3 DESC, 2 ASC, 1 DESC
+```
